<resources>

    <string name="get_user_info">Enter your details</string>
    <string name="login_up_label">Login</string>
    <string name="login_sign_up">Don\'t have an account?</string>
    <string name="login_greetings_message">We\'re glad to have you back.</string>
    <string name="login_error">Your username or password is incorrect</string>
    <string name="sign_up_email">Email Address</string>
    <string name="username">Username</string>
    <string name="sign_up_phone_number">Phone Number</string>
    <string name="sign_up_stage_button">Next</string>
    <string name="sign_up_done">Done</string>
    <string name="sign_up_contact_details_head">Enter Your Contact Details</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="app_name">IMP</string>
    <string name="creator_sign_up_first_name">First Name</string>
    <string name="creator_sign_up_last_name">Last Name</string>
    <string name="creator_year_of_birth">Date Of Birth</string>
    <string name="creator_sign_up_gender">Gender</string>
    <string name="creator_username_label">Username</string>
    <string name="creator_password_label">Password</string>
    <string name="creator_confirm_password_label">Confirm Password</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="terms_and_conditions_label">Do you agree to our Terms and Conditions?</string>
    <string name="terms_and_conditions_radio_button">Do you agree with the terms and conditions?</string>
    <string name="header_about_us">ABOUT US</string>
    <string name="header_contentWedLoveFromYou">CONTENT WE\'D LOVE FROM YOU</string>
    <string name="header_whereToFindProduct">WHERE TO FIND OUR PRODUCT</string>
    <string name="header_callToAction">CALL TO ACTION</string>
    <string name="header_campaignDos">DOs</string>
    <string name="header_campaignDonts">DONTs</string>
    <string name="campaign_apply">APPLY</string>
    <string name="post_activity_title">Instagram Post</string>
    <string name="post">Publish to Instagram</string>
    <string name="caption_hint">Caption</string>
    <string name="fee">Fee</string>
    <string name="notes">Notes</string>
    <string name="dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dictum libero sapien, a vulputate dolor aliquam vel. Pellentesque ut sollicitudin turpis, non malesuada neque. Vestibulum et lorem sodales, congue dui eu, laoreet orci. Pellentesque sit amet ultrices massa, sit amet bibendum justo</string>
    <string name="connection_failed">Oops… Sorry we were unable to connect. Please check your internet connection</string>
    <string name="post_caption">Post Caption</string>
    <string name="camera">Camera</string>
    <string name="phone_gallery">Gallery</string>
    <string name="view">View</string>
    <string name="submission_image">Submission Image</string>
    <string name="library">Library</string>
    <string name="update">Update</string>
    <string name="uploading">Uploading…</string>
    <string name="done">Done</string>
    <string name="submit">Submit</string>
    <string name="failed">Failed</string>
    <string name="photos">Photos</string>
    <string name="storage_permission_required">Storage access permission is required</string>
    <string name="storage_permission_unavailable">Storage access permission in unavailable</string>
    <string name="storage_permission_granted">Permission is granted!</string>
    <string name="storage_permission_denied">Permission is denied!</string>
    <string name="ok">OK</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="caption_details">Write a caption the way you\'d post it</string>
    <string name="fees_details">The amount you\'d like to be paid</string>
    <string name="notes_details">Leave a note for the brand</string>
    <string name="post_to">Post To</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="moodboards">Moodboards</string>
    <string name="profile">Profile</string>
    <string name="channel_name">imp_notification_channel</string>
    <string name="channel_description">imp_notification_channel_desc</string>
    <string name="copy_clipboard">Your submission caption copied to clipboard.</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="months_of_year">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>


    <!-- Post activity -->

    <!-- Image submission texts -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_dashboard">MainDashboard</string>
    <string name="title_campaign_feed">Feed</string>
    <string name="title_campaign_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_creator_profile">Profile</string>
    <string name="title_activity_campaign">CampaignView</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_choose_media">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
</resources>
