<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_campaign_feed"
        android:icon="@drawable/ic_home"
        android:title="@string/title_campaign_feed" />

    <item
        android:id="@+id/navigation_campaign_dashboard"
        android:icon="@drawable/ic_library_icon"
        android:title="@string/title_campaign_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_bottom_nav_notification"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_creator_profile"
        android:icon="@drawable/ic_bottom_nav_profile"
        android:title="@string/title_creator_profile" />

</menu>
