<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAutofill="no"
    tools:context=".loginsignup.signup.ContactInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/contact_fragment_header"
            android:layout_width="215dp"
            android:layout_height="43dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:text="@string/sign_up_contact_details_head"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/contact_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="8dp"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp" />

        <EditText
            android:id="@+id/contact_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="8dp"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/sign_up_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp" />

        <EditText
            android:id="@+id/contact_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="8dp"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/sign_up_phone_number"
            android:inputType="phone"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_field"
            >

            <EditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:layout_marginVertical="8dp"
                android:background="@color/backgroundColor"
                android:hint="@string/creator_password_label"
                android:inputType="textPassword"
                android:paddingHorizontal="8dp"
                android:paddingVertical="16dp" />
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_gravity="center_vertical"
                android:tint="@color/svg_grey"
                android:src="@drawable/ic_visibility_24px"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/terms_conditions_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions_label"
                android:textSize="16sp"
                />
        </LinearLayout>
    </LinearLayout>



    <Button
        android:id="@+id/contact_details_next"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/primary_button"
        android:text="@string/sign_up_stage_button"
        android:textColor="@color/primaryForeGround"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>