<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        android:paddingVertical="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="162dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="277dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/get_user_info"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/creator_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp"
            android:layout_gravity="center"
            android:layout_marginVertical="8dp"
            android:background="@drawable/input_field"
            android:hint="@string/creator_sign_up_first_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/creators_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:paddingHorizontal="8dp"
            android:layout_gravity="center"
            android:layout_marginVertical="8dp"
            android:background="@drawable/input_field"
            android:hint="@string/creator_sign_up_last_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/gender_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:paddingVertical="16dp"
            android:paddingHorizontal="8dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/input_field" />

        <TextView
            android:id="@+id/date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:paddingVertical="16dp"
            android:text="@string/date_of_birth"
            android:paddingHorizontal="8dp"
            android:layout_gravity="center"
            android:background="@drawable/input_field"
            />
    </LinearLayout>


    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:paddingHorizontal="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sign_up_stage_button"
        android:textColor="@color/primaryForeGround"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>