<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".submission_types.PostSubmissionDetails">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/activity_tool_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back_24px"
            app:menu="@menu/post_submission_menu"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/root_horizontal_padding"
        android:layout_marginTop="@dimen/root_top_padding"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:layout_marginEnd="@dimen/dimen_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:helperTextEnabled="true"
                app:helperText="@string/caption_details"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/caption"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/caption_hint"
                    android:inputType="textMultiLine"
                    android:minLines="3"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/submission_thumbnail"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:layout_marginVertical="@dimen/item_vertical_margin"
                android:layout_weight="1"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/hashtag_chipgroups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginVertical="@dimen/item_vertical_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:helperTextEnabled="true"
            app:helperText="@string/fees_details"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fee_rate"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="number"
                android:hint="@string/fee"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:helperText="@string/notes_details"
            app:helperTextEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/notes"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/notes"
                android:layout_marginVertical="@dimen/item_vertical_margin"
                android:inputType="textMultiLine"
                android:minLines="3"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>